Adicionado outros endpoints
